--- a/Backend/BloodBank/src/main/resources/application.properties
+++ b/Backend/BloodBank/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/bloodbankdb?serverTimezone=UTC
 spring.datasource.username = root
-spring.datasource.password = Dipak@1796
+spring.datasource.password = root
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
